# blockyard

./: .dockerignore  .gitignore  .gitmodules  .npmrc  .pnpmfile.cjs  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.js
.github/workflows/: ci.yml
db/: dump.sql  kysely.ts  kysely.types.ts  package.json  prisma.ts  schema.prisma  supabase.ts  supabase.types.ts  types.ts
db/scripts/: enable-rls.ts  fix-permissions.ts
server/: Cargo.toml  Dockerfile  package.json
server/scripts/: deploy.ts
server/src/: main.rs  registry.rs  videoroom.rs
server/src/worlds/terrain/: mod.rs
test-simple-peer/: index.html  package.json  vite.config.ts
website/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json  unframer.json  vite.config.ts  vite.config.ts.timestamp-1718468852056-71f51d246fd52.mjs
website/scripts/: deploy.ts
website/src/: entry.client.tsx  global.css  mediasoup.tsx  minecord.ts  network.test.ts  root.tsx  voice.ts  world.ts
website/src/assets/: minecraft.glb
website/src/components/: 95.tsx  MineCord.client.tsx
website/src/framer/: footer.d.ts  footer.js  hero.d.ts  hero.js  meta.json  styles.css
website/src/lib/: env.ts  minecord.ts  rest.tsx  supabase.server.ts  supabase.ts  utils.test.ts  utils.tsx
website/src/routes/: _auth.tsx  _auth.world.$worldId.tsx  _auth.world._index.tsx  _auth.world.tsx  _index.tsx  api.auth.callback.tsx  api.health.tsx  health.tsx  login.tsx
