[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
voxelize = { path = "../voxelize" }
actix = "0.13.3"

actix-web = "4.5.1"
specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
serde = { version = "1.0.198", features = ["derive"] }
hashbrown = { version = "0.14.3", features = ["serde"] }

serde_json = "1.0.116"
noise = "0.9.0"
nanoid = "0.4.0"
kdtree = "0.7.0"
rayon = "1.10.0"
log = "0.4.21"
actix-cors = "0.7.0"
actix-files = "0.6.5"

actix-web-actors = "4.3.0"
# [target.x86_64-unknown-linux-gnu]
# linker = "x86_64-linux-musl-gcc"
